# gbook

./: .gitignore  .gitmodules  CMakeLists.txt  config  doxygen.conf  gbook.kdev4  o2_config  readme
cmake/: FindJsonCpp.cmake  getgit.cmake
include/: abook_manager.h  config.h  contacts.h  curl.h  event_loop.h  funcs.h  google_manager.h  logger.h  macros.h  merger.h  oauth2.h  screen.h  storage_manager.h  sync.h  typedefs.h  user.h  user_reader.h  user_writer.h  version.h.in  window.h
lib/abook/: user_reader.cpp
lib/abook/include/: user.h  user_reader.h  user_writer.h
lib/cfg_parser/: CREDITS  Makefile  README  cfg_parser.cpp  cfg_parser.h  config_parser.dev  main.cpp  new.cfg  test.cfg  test2.cfg
lib/gmock-1.7.0/: .gitignore
lib/gmock-1.7.0/gtest/: .gitignore
lib/gmock-1.7.0/scripts/: fuse_gmock_files.py
lib/gmock-1.7.0/scripts/generator/: gmock_gen.py
lib/gtest-1.7.0/: .gitignore
src/: abook_manager.cpp  config.cpp  contacts.cpp  curl.cpp  event_loop.cpp  funcs.cpp  google_manager.cpp  main.cpp  merger.cpp  oauth2.cpp  screen.cpp  sync.cpp  test.cpp  user_reader.cpp  user_writer.cpp  window.cpp
test/: google_stuff.cpp  gtest.cpp  user_reader.cpp
test/gbook/: abook_manager.cpp  merger.cpp
test/gbook/abook/: user_reader.cpp  user_writer.cpp
